--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "babel-plugin-emotion": "^11.0.0",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
